rainbow cleargrid and black buttons fully working UI looks wonky will fix sometime in future

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
             <div id="adjust">Adjust Grid Size</div>
             <div class="slider">
                 <input type="range" id="slide-value" value="0" min="16" max="100"/>
-                
             </div> 
             <div class="value">16x16</div>
+            <div class="buttons">
+                <button id="clear-grid">Clear grid</button>
+                <button id="rainbow">Rainbow</button>
+                <button id="black">Black</button>
+            </div>
         </div> 
         <div class="sketch">
             <!--holds all dynamically created divs-->
